Update id to match directory

--- a/src/talosctl/devcontainer-feature.json
+++ b/src/talosctl/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
     "name": "talosctl",
-    "id": "talosctl-cli",
+    "id": "talosctl",
     "version": "1.0.0",
     "description": "Install the talosctl to manage a talos cluster",
     "options": {
