--- a/src/talosctl/devcontainer-feature.json
+++ b/src/talosctl/devcontainer-feature.json
@@ -11,6 +11,6 @@
         }
     },
     "installsAfter": [
-        "ghcr.io/devcontainers/features/common-utils",
+        "ghcr.io/devcontainers/features/common-utils"
     ]
 }
