--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,6 +16,7 @@ jobs:
           - talosctl
           - flux
           - kubectl
+          - kubectx
         baseImage:
           - debian:latest
           - ubuntu:latest
@@ -38,6 +39,7 @@ jobs:
           - talosctl
           - flux
           - kubectl
+          - kubectx
     steps:
       - uses: actions/checkout@v3
 
