Add homelab-mcp feature

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,6 +17,7 @@ jobs:
           - flux
           - kubectx
           - cilium
+          - homelab-mcp
         baseImage:
           - debian:latest
           - ubuntu:latest
@@ -40,6 +41,7 @@ jobs:
           - flux
           - kubectx
           - cilium
+          - homelab-mcp
     steps:
       - uses: actions/checkout@v3
 
